--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "main/lib/libj1939"]
 	path = main/lib/libj1939
 	url = https://github.com/paoloteti/libj1939.git
+[submodule "main/lib/pubsub-c"]
+	path = main/lib/pubsub-c
+	url = https://github.com/jaracil/pubsub-c.git
+[submodule "components/lvgl/lvgl"]
+	path = components/lvgl/lvgl
+	url = https://github.com/lvgl/lvgl.git
