Add GPS parsing

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "components/lvgl/lvgl"]
 	path = components/lvgl/lvgl
 	url = https://github.com/lvgl/lvgl.git
+[submodule "components/minmea/minmea"]
+	path = components/minmea/minmea
+	url = https://github.com/kosma/minmea.git
