--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,7 @@ list( APPEND LIBS lvgl )
 list( APPEND LIBS lvgl_tft )
 list( APPEND LIBS lvgl_drivers )
 list( APPEND LIBS minmea)
+list( APPEND LIBS pubsub-c)
 
 # Source Files
 list( APPEND SRC_FILES main.c )
@@ -11,7 +12,6 @@ list( APPEND SRC_FILES stepper_gauge.c )
 list( APPEND SRC_FILES can_j1939.c )
 list( APPEND SRC_FILES gps.c )
 list( APPEND SRC_FILES display.c )
-list( APPEND SRC_FILES lib/pubsub-c/src/pubsub.c )
 
 # Include Directories
 
@@ -31,7 +31,6 @@ add_subdirectory(lib/libj1939)
 
 # Include Directories
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/libj1939/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/pubsub-c/src)
 
 # Link Target To Main Component
 target_link_libraries(${COMPONENT_LIB} PUBLIC j1939)
