Add initial console & speedometer support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,7 @@ list( APPEND EXTRA_COMPONENT_DIRS components/lvgl_drivers )
 list( APPEND EXTRA_COMPONENT_DIRS components/minmea )
 list( APPEND EXTRA_COMPONENT_DIRS components/pubsub-c )
 
+list( APPEND EXTRA_COMPONENT_DIRS $ENV{IDF_PATH}/components/console )
+
 
 project(Dash C CXX ASM)
