--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "components/pubsub-c/pubsub-c"]
 	path = components/pubsub-c/pubsub-c
 	url = https://github.com/jaracil/pubsub-c.git
+[submodule "components/libj1939/libj1939"]
+	path = components/libj1939/libj1939
+	url = https://github.com/paoloteti/libj1939.git
